# fni2stib8

./: Cargo.toml  README.md  backgrounds.json  slides.json
src/: editors.rs  images.rs  lib.rs  main.rs  model.rs  persistence.rs  player.rs
