[package]
name = "fni2stib8"
version = "0.1.0"
authors = ["Nikita Zdanovitch <nzdanovitch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy_egui = "0.4"
serde = { version = "1.0", feature = ["derive"] }
serde_json = "1.0"
