[package]
name = "fni2stib8"
version = "0.1.0"
authors = ["Nikita Zdanovitch <nzdanovitch@gmail.com>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy_egui = "0.4"
serde = { version = "1.0", feature = ["derive"] }
serde_json = "1.0"
image = "0.23"
wasm-bindgen = "0.2"

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_wgpu", "bevy_winit", "render", "x11"]}
ureq = "2.1"

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render"]}
bevy_webgl2 = "0.5"
